# ecommerce

./: .env-example  .gitignore  README.md  pyproject.toml
app/: config.py  database.py  main.py
app/models/: order.py  product.py
app/routers/: orders.py  products.py
app/services/: order_service.py  product_service.py
